AD_A1_1: Minor fixes of layout, flicker issue in header and pixel perfection

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -6,4 +6,5 @@ html {
 
 body {
     font-family: $font-inter;
+    min-height: max-content;
 }
